# My_studyproject

./: .gitignore  README.md  action.md
CPlusPlus_study/: hello  hello.cpp
cpp/: hello.cpp
cpp/C++_Primer_Plus/chapt2/: 2.1_myfirst.cpp  2.2_carrots.cpp  2.3_getinfo.cpp
cpp/C++_Primer_Plus/chapt4/: 4.5_instr3.cpp
diary/: 2026.5.13.md  notes.md
math/机器学习中的数学/: 1.5.3.py
math/机器学习中的数学/chapt1/: 1.2.5.py  1.3.3.py
python/Python编程从入门到实践/: note.md
python/Python编程从入门到实践/chapt10_file/: pi_digits.txt
python/Python编程从入门到实践/chapt2_variables_datatypes/: practice_2.1and2.2_simply_massage.py
python/Python编程从入门到实践/chapt3_list_introduce/: practice_3.3.py
python/Python编程从入门到实践/chapt4_list_operate/: 4.6.py
python/Python编程从入门到实践/chapt5_if/: checking_usernames.py  practice5.10.py  practice5.3.py  (+1 more)
python/projects/: 1.py  2.py  introduce.md
python/talk/: about_practice.md
ros2/: coplite_advise.md
ros2/Fishros/chapt2/: CMakeLists.txt  ros2_cpp_node.cpp
ros2/Fishros/chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
ros2/Fishros/chapt2/chapt2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_funcational.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
ros2/Fishros/chapt2/chapt2_ws/src/demo_python_pkg/: package.xml  setup.py
ros2/Fishros/chapt2/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  python_node.py
ros2/Knowledge_points/: CMake.md  colcon.md  launch.md  rclcpp.md  ros2_run.md  turtle.md  workspace.md
ros2_study/Knowledge_points/: CPlusPlus_language.md  Ubuntu_command.md  echo.md  turtle.md
(+251 files in other folders)
